# daacc_preficient

./: DailyWeatherData.csv  Makefile  README.md  pyproject.toml  requirements.txt  sensores_airenuevoleon.xlsx
docs/: mkdocs.yml
docs/docs/: index.md
models/: Clasificacion_Calidad_Aire.pkl  Classification.ipynb  ClassificationModel.ipynb  model_epoch_100.pth  model_epoch_200.pth  modelv3_epoch_100.pth  modelv3_epoch_150.pth  modelv3_epoch_200.pth  modelv3_epoch_250.pth  modelv3_epoch_300.pth  modelv3_epoch_350.pth  modelv3_epoch_400.pth  modelv3_epoch_450.pth  modelv3_epoch_50.pth  modelv3_epoch_500.pth  modelv3_epoch_550.pth  modelv3_epoch_600.pth  modelv3_epoch_650.pth  modelv3_epoch_700.pth  modelv3_epoch_750.pth  modelv3_epoch_800.pth  scaler.pkl
notebooks/: Correlation.ipynb  DataAnalysis.ipynb  DataExploration.ipynb  Example.ipynb  Forecasting.ipynb  HeatMap.ipynb  OutlinerPM25.ipynb  PM25Extremo.ipynb  Visualization.ipynb  WeatherPollutionCorrelation.ipynb
preficient_data_analysis/: __init__.py  dataset.py  features.py  plots.py
preficient_data_analysis/modeling/: predict.py  train.py
