[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "preficient_data_analysis"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "The Buggers" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = ">=3.10.0"


[tool.ruff]
line-length = 99
src = ["preficient_data_analysis"]
include = ["pyproject.toml", "preficient_data_analysis/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["preficient_data_analysis"]
force-sort-within-sections = true

